# tui-alchemy

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  wrangler.toml
.cargo/: config.toml
.github/: release.yml
.github/workflows/: deploy-website.yml
assets/pixel-sprites/: manifest.json
data/: little_alchemy.json  little_alchemy_2.json  little_alchemy_all_combinations.json  little_alchemy_wiki.json
docs/: README.md  install.md  landing-redesign-design.md  list.html  release-v0.1.0.md  release-v0.2.0.md
examples/: render_preview.rs  screenshot.rs
output/: pixel-atlas-preview.html  tui-preview.txt
scripts/: build-website.sh  configure-cloudflare-dns.mjs  deploy-website.sh  install-tui-alchemy.ps1  install-tui-alchemy.sh  package-current-binary.mjs  package-linux-binary-in-docker.sh  provision-cloudflare-pages.mjs  test-installer-docker.sh  test-website.mjs  update-readme-screenshots.sh  upload-r2-assets.mjs
scripts/landing-art/: generate.py  pixelate.py
scripts/update-readme-screenshots/: Cargo.toml  main.rs
src/: about.rs  app.rs  data.rs  effects.rs  input_event.rs  layout.rs  lib.rs  main.rs  palette.rs  render_png.rs  sprites.rs  theme.rs  ui.rs
src/app/: input.rs  state.rs
src/data/: kind.rs
src/ui/: sprite_strategy.rs
tests/: alchemy_flow.rs  test_generate_pixel_sprites.py
tools/: generate_pixel_sprites.py  render_pixel_atlas_preview.py  seed_pixel_sprites.py
website/: _worker.js  index.html  package-lock.json  package.json  site.webmanifest  standalone.html
website/assets/: main.css
