[package]
name = "tui-alchemy"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["kmelct"]
description = "A terminal alchemy crafting game with Ratatui UI, pixel-art sprites, and a 755-element recipe book."
readme = "README.md"
repository = "https://github.com/kmelct/tui-alchemy"
homepage = "https://github.com/kmelct/tui-alchemy"
documentation = "https://github.com/kmelct/tui-alchemy#readme"
license = "MIT"
keywords = ["alchemy", "ratatui", "terminal", "tui", "game"]
categories = ["command-line-utilities", "games"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/CHANGELOG.md",
    "/README.md",
    "/assets/pixel-sprites/**",
    "/data/little_alchemy.json",
    "/docs/**",
    "/examples/*.rs",
    "/tests/*.rs",
    "/tests/*.py",
    "/tools/*.py",
    "/src/**",
]

[dependencies]
crossterm = "0.29"
image = "0.25.10"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[lints.clippy]
nursery = { level = "deny", priority = -1 }