[package]
name = "tui-alchemy"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["kmelct"]
description = "A terminal alchemy crafting game with Ratatui UI, pixel-art sprites, and a 755-element recipe book."
readme = "README.md"
repository = "https://github.com/kmelct/tui-alchemy"
homepage = "https://github.com/kmelct/tui-alchemy"
documentation = "https://github.com/kmelct/tui-alchemy#readme"
license = "MIT"
keywords = ["alchemy", "ratatui", "terminal", "tui", "game"]
categories = ["command-line-utilities", "games"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/CHANGELOG.md",
    "/README.md",
    "/assets/pixel-sprites/**",
    "/data/little_alchemy.json",
    "/docs/**",
    "/scripts/**",
    "/tests/*.rs",
    "/src/**",
]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
ratatui = { version = "0.30", default-features = false, features = ["std", "all-widgets", "macros", "layout-cache", "underline-color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["std", "all-widgets", "macros", "layout-cache", "underline-color", "crossterm_0_29"] }


[lints.clippy]
nursery = { level = "deny", priority = -1 }